fix menu on tablets

--- a/amani/themes/peace/css/style.css
+++ b/amani/themes/peace/css/style.css
@@ -249,6 +249,8 @@ a.button {
   float: right;
   width: 61%;
   padding-bottom: 10px;
+  position: absolute;
+  right: 30px;
   margin-right: 0; }
   @media screen and (max-width: 600px) {
     #header-region {
@@ -1225,17 +1227,11 @@ a.button {
       font-size: 1.2em; }
 
 #header-region #block-menu-menu-social-media {
-  display: block;
-  float: left;
-  margin-right: 2.12766%;
-  width: 31.91489%;
-  margin-left: 68.08511%;
+  width: 100%;
   margin-right: 0;
   position: absolute;
   right: 190px;
-  top: 36px; }
-  #header-region #block-menu-menu-social-media:last-child {
-    margin-right: 0; }
+  top: 8px; }
   #header-region #block-menu-menu-social-media .content {
     font-size: 16px; }
     #header-region #block-menu-menu-social-media .content li {
