--- a/amani/themes/peace/sass/_blocks.sass
+++ b/amani/themes/peace/sass/_blocks.sass
@@ -434,12 +434,11 @@
 // social menu
 #block-menu-menu-social-media
   #header-region &
-    @include span-columns(4)
-    @include shift(8)
+    @include fill-parent()
     @include omega
     position: absolute
     right: 190px
-    top: 36px
+    top: 8px
     .content
       font-size: 16px
       li
