--- a/amani/themes/peace/sass/_custom.sass
+++ b/amani/themes/peace/sass/_custom.sass
@@ -104,6 +104,8 @@ a.button
   float: right
   width: 61%
   padding-bottom: 10px
+  position: absolute
+  right: $gutter
   //@include span-columns(9)
   @include omega
   @include media($motab)
